# RummikubConsole

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Pipfile  README.md  Taskfile.yml  console.py  pyproject.toml  set_generator.py  setup.cfg  setup.py  solver.py
.github/: renovate.json
.github/workflows/: ci-cd.yml  codeql.yml
src/rummikubconsole/: __init__.py  __main__.py  _console.py  _tile_source.py  _types.py  _utils.py  console.py  gamestate.py  ruleset.py  solver.py  types.py
src/rummikubsolver/: console.py  gamestate.py  ruleset.py  set_generator.py  solver.py  types.py
