[project]
name = "RummikubConsole"
description = "Rummikub solver console with multi-game support and persistence."
requires-python = ">=3.9"

authors = [
    {"name" = "Martijn Pieters", "email" = "mj@zopatista.com"},
]

readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
    "click",
    "cvxpy",
    "cvxopt>=1.3.0",
    "numpy",
    "importlib_metadata; python_version <= '3.8'",
    "platformdirs>=4.3.6",
]

dynamic = ["version"]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
]

[project.scripts]
rsconsole = "rummikubconsole.__main__:rsconsole"

[project.urls]
GitHub = "https://github.com/mjpieters/RummikubConsole"
Issues = "https://github.com/mjpieters/RummikubConsole/issues"
Changelog = "https://github.com/mjpieters/RummikubConsole/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling~=1.27", "uv-dynamic-versioning~=0.8"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.ruff.lint]
extend-select = [
    "B",    # bugbear
    "I",    # isort
    "SIM",  # simplify
    "UP",   # pyupgrade
    "RUF",  # additional ruff rules
]

[tool.pyright]
include = ["src"]
strict = ["src"]
