[metadata]
name = RummikubSolver
description = Rummikub solver coded in Python that uses integer linear programming to maximise the number or value of tiles placed in the popular board game. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ollie-Hooper/RummikubSolver
project_urls =
    Source=https://github.com/Ollie-Hooper/RummikubSolver

author = Ollie Hooper
author_email = oliverphooper@gmail.com

license = unknown

[options]
setup_requires =
    setuptools_scm
packages = find:
package_dir =
    =src
install_requires =
    numpy>=1.7,<1.20; sys_platform == "darwin"
    numpy>=1.7; sys_platform != "darwin"
    cvxpy
    cvxopt

[options.entry_points]
console_scripts =
    rcsolver = rummikubsolver.console:main