[metadata]
name = RummikubConsole
description = Rummikub solver console with multi-game support and persistence.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mjpieters/RummikubConsole
project_urls =
    Github: repo = https://github.com/mjpieters/RummikubConsole
    Github: issues = https://github.com/mjpieters/RummikubConsole/issues

author = Martijn Pieters
author_email = mj@zopatista.com

license = MIT
license_file = LICENSE.txt

classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Games/Entertainment :: Board Games

[options]
setup_requires =
    setuptools_scm
packages = find:
package_dir =
    =src
python_requires = >= 3.8
install_requires =
    appdirs
    click
    cvxpy
    cvxopt
    numpy>=1.7,<1.20; sys_platform == "darwin"
    numpy>=1.7; sys_platform != "darwin"
    importlib_metadata; python_version <= "3.8"

[options.entry_points]
console_scripts =
    rsconsole = rummikubconsole.__main__:rsconsole